// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Entry/MLSlider Basic Range 1`] = `
<div>
  <div
    class="ant-slider ml-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track ant-slider-track-1"
      style="left:0%;right:auto;width:100%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-slider-handle ant-slider-handle-1"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="ant-slider-handle ant-slider-handle-2"
      role="slider"
      style="left:100%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
  <div
    class="ant-slider ml-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track ant-slider-track-1"
      style="left:0%;right:auto;width:100%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-slider-handle ant-slider-handle-1"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="ant-slider-handle ant-slider-handle-2"
      role="slider"
      style="left:100%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>
</div>
`;

exports[`Storyshots Data Entry/MLSlider Basic Single 1`] = `
<div
  class="ant-slider ml-slider"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="left:0%;right:auto;width:0%"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="ant-slider-handle"
    role="slider"
    style="left:0%;right:auto;transform:translateX(-50%)"
    tabindex="0"
  />
  <div
    class="ant-slider-mark"
  />
</div>
`;
